--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Container of Todo List -->
     <div id="container">
-      <input placeholder="Add a task" class="add-task" id="add" data-helloWord="asdasdas"/>
+      <input placeholder="Add a task" class="add-task" id="add" data-helloWord="asdasdas" required />
       <span id="total-tasks"><b>Total tasks: </b><span id="tasks-counter"><b>0</b></span></span>
 
       <!-- list the tasks -->
